# cz4031-database-system-principles

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bp_tree/: CMakeLists.txt  bp_tree.cpp  bp_tree.h  bp_tree_display.cpp  bp_tree_insert.cpp  bp_tree_insertion.cpp  bp_tree_remove.cpp  bp_tree_search.cpp  bp_tree_utilities.cpp  test.cpp
data/: data_anal.py
storage/: CMakeLists.txt  disk_storage.cpp  disk_storage.h  helper_types.h  test.cpp
